security_groups.tf
resource "aws_security_group" "tf-http-ssh-sg" {
  name        = "Allow-HTTP_and_SSH-terraform"
  description = "Allow HTTP and SSH inbound traffic"
  vpc_id      = aws_vpc.terraform-vpc.id

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tf HTTP and SSH sg"
  }
}
